--- a/dashboard/src/main/resources/dashboard-client/bower.json
+++ b/dashboard/src/main/resources/dashboard-client/bower.json
@@ -12,7 +12,9 @@
         "angular-touch": "^1.3.0",
         "angular-ui-router": "~0.2.13",
         "ng-tags-input": "~2.3.0",
-        "angular-bootstrap": "0.12.1"
+        "angular-bootstrap": "0.12.1",
+        "angularjs-toaster": "~0.4.13",
+        "angular-bootstrap-show-errors": "2.3.0"
     },
     "devDependencies": {
         "angular-mocks": "^1.3.0"
