--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Datasource configuration
-spring.datasource.url=jdbc:mysql://localhost/dictionary
+spring.datasource.url=jdbc:mysql://localhost/dictionary?useUnicode=yes&characterEncoding=utf8
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=dictionary
 spring.datasource.password=dictionary
@@ -16,6 +16,7 @@ spring.jpa.hibernate.ddl-auto=create
 
 #Server
 server.port=8081
+server.tomcat.uri-encoding=UTF-8
 
 # Management
 endpoints.shutdown.enabled=true
@@ -35,13 +36,17 @@ spring.messages.encoding=UTF-8
 logging.file=../yorubaname.log
 
 #Logging
-logging.level.org.springframework.web: INFO
-logging.level.org.hibernate: INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
 
 ##Security
 #security.user.name=admin
 #security.user.password=admin
 
+# HTTP encoding
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
 
 # ElasticSearch
 es.clustername=yoruba_name_dictionary
