--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -54,3 +54,6 @@ es.indexname=dictionary
 es.documenttype=nameentry
 es.hostname=localhost
 es.portnumber=9300
+# the directory elasticsearch should store its data. If blank a data directory will be created in the directory
+# the application is running from and that will be used.
+es.data.path=
