--- a/dashboard/src/main/resources/dashboard-client/bower.json
+++ b/dashboard/src/main/resources/dashboard-client/bower.json
@@ -24,12 +24,17 @@
     "ui-bootstrap": "~0.13.4",
     "ui-router": "~0.2.15",
     "textAngular": "~1.4.6",
-    "angular-growl": "~0.4.0",
     "selectize": "~0.12.1",
     "footable": "~2.0.3",
     "d3": "~3.5.6",
     "c3": "~0.4.10",
-    "autosize": "~3.0.13"
+    "autosize": "~3.0.13",
+    "angular-breadcrumb": "~0.4.1",
+    "angular-retina": "~0.3.3",
+    "ng-switchery": "~1.0.0-alpha7",
+    "multiselect": "~0.9.12",
+    "select2": "~4.0.0",
+    "angular-growl-2": "~0.7.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
