--- a/dashboard/src/main/resources/dashboard-client/bower.json
+++ b/dashboard/src/main/resources/dashboard-client/bower.json
@@ -5,7 +5,6 @@
     "angular": "~1.3.16",
     "bootstrap": "^3.2.0",
     "angular-animate": "^1.3.0",
-    "angular-cookies": "~1.3.16",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
@@ -34,7 +33,8 @@
     "ng-switchery": "~1.0.0-alpha7",
     "multiselect": "~0.9.12",
     "select2": "~4.0.0",
-    "angular-growl-2": "~0.7.5"
+    "angular-growl-2": "~0.7.5",
+    "angular-cookies": "1.4.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
