--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <java.version>1.8</java.version>
         <spring-boot.version>1.2.4.RELEASE</spring-boot.version>
         <mysql-connector.version>5.1.34</mysql-connector.version>
-        <jackson-core.version>2.5.1</jackson-core.version>
+        <jackson-core.version>2.6.1</jackson-core.version>
         <logback-classic.version>1.1.2</logback-classic.version>
         <hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
         <poi-ooxml.version>3.11</poi-ooxml.version>
@@ -49,6 +49,9 @@
         <spring-handlebars.version>0.1.1</spring-handlebars.version>
         <json-path-assert.version>2.0.0</json-path-assert.version>
         <lucene.version>4.10.4</lucene.version>
+        <jackson-datatype-jsr310.version>2.6.1</jackson-datatype-jsr310.version>
+        <jackson-databind.version>2.6.1</jackson-databind.version>
+        <jackson-annotations.version>2.6.1</jackson-annotations.version>
     </properties>
 
     <dependencyManagement>
@@ -65,6 +68,7 @@
                 <artifactId>springloaded</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
+
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -108,6 +112,22 @@
                 <artifactId>jackson-core</artifactId>
                 <version>${jackson-core.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>${jackson-datatype-jsr310.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson-databind.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson-annotations.version}</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>ch.qos.logback</groupId>
