--- a/dashboard/src/main/resources/dashboard-client/bower.json
+++ b/dashboard/src/main/resources/dashboard-client/bower.json
@@ -33,8 +33,8 @@
     "ng-switchery": "~1.0.0-alpha7",
     "multiselect": "~0.9.12",
     "select2": "~4.0.0",
-    "angular-growl-2": "~0.7.5",
-    "angular-cookies": "1.4.6"
+    "angular-cookies": "1.4.6",
+    "angular-toastr": "~1.5.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
