--- a/dashboard/src/main/resources/dashboard-client/bower.json
+++ b/dashboard/src/main/resources/dashboard-client/bower.json
@@ -34,7 +34,8 @@
     "multiselect": "~0.9.12",
     "select2": "~4.0.0",
     "angular-cookies": "1.4.6",
-    "angular-toastr": "~1.5.0"
+    "angular-toastr": "~1.5.0",
+    "angular-md5": "~0.1.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
