--- a/dashboard/src/main/resources/dashboard-client/bower.json
+++ b/dashboard/src/main/resources/dashboard-client/bower.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "~1.3.16",
-    "bootstrap": "^3.2.0",
+    "bootstrap": "3.3.4",
+    "angular-bootstrap": "~0.13.0",
+    "angular-bootstrap-show-errors": "2.3.0",
+    "ui-bootstrap": "~0.13.4",
     "angular-animate": "^1.3.0",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
@@ -11,8 +14,6 @@
     "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.13",
     "ng-tags-input": "~2.3.0",
-    "angular-bootstrap": "~0.13.0",
-    "angular-bootstrap-show-errors": "2.3.0",
     "angular-ui-notification": "~0.0.11",
     "papaparse": "4.1.1",
     "ng-file-upload": "~5.0.9",
@@ -20,12 +21,10 @@
     "angular-file-upload": "~1.1.5",
     "angular-loader": "~1.4.7",
     "angular-scenario": "~1.4.7",
-    "ui-bootstrap": "~0.13.4",
     "ui-router": "~0.2.15",
     "textAngular": "~1.4.6",
     "selectize": "~0.12.1",
     "footable": "~2.0.3",
-    "d3": "~3.5.6",
     "c3": "~0.4.10",
     "autosize": "~3.0.13",
     "angular-breadcrumb": "~0.4.1",
@@ -35,7 +34,8 @@
     "select2": "~4.0.0",
     "angular-cookies": "1.4.6",
     "angular-toastr": "~1.5.0",
-    "angular-md5": "~0.1.8"
+    "angular-md5": "~0.1.8",
+    "fontawesome": "~4.4.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
@@ -43,8 +43,6 @@
   "appPath": "app",
   "moduleName": "dashboardappApp",
   "resolutions": {
-    "angular": "1.4.6",
-    "bootstrap-css": "3.2.0",
-    "d3": "~3.5.6"
+    "angular": "1.4.6"
   }
 }
