--- a/dashboard/src/main/resources/dashboard-client/bower.json
+++ b/dashboard/src/main/resources/dashboard-client/bower.json
@@ -13,8 +13,6 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.13",
-    "ng-tags-input": "~2.3.0",
-    "angular-ui-notification": "~0.0.11",
     "papaparse": "4.1.1",
     "ng-file-upload": "~5.0.9",
     "ng-file-upload-shim": "~5.0.9",
@@ -25,18 +23,16 @@
     "textAngular": "~1.4.6",
     "selectize": "~0.12.1",
     "footable": "~2.0.3",
-    "c3": "~0.4.10",
-    "d3": "~3.5.6",
     "autosize": "~3.0.13",
     "angular-breadcrumb": "~0.4.1",
     "angular-retina": "~0.3.3",
-    "ng-switchery": "~1.0.0-alpha7",
     "multiselect": "~0.9.12",
     "select2": "~4.0.0",
-    "angular-cookies": "1.4.6",
     "angular-toastr": "~1.5.0",
     "angular-md5": "~0.1.8",
-    "fontawesome": "~4.4.0"
+    "fontawesome": "~4.4.0",
+    "ngstorage": "~0.3.9",
+    "ng-switchery": "~1.0.0-alpha7"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
@@ -44,6 +40,6 @@
   "appPath": "app",
   "moduleName": "dashboardappApp",
   "resolutions": {
-    "angular": "1.4.6"
+    "angular": "1.4.7"
   }
 }
