--- a/dashboard/src/main/resources/dashboard-client/bower.json
+++ b/dashboard/src/main/resources/dashboard-client/bower.json
@@ -32,7 +32,8 @@
     "angular-md5": "~0.1.8",
     "fontawesome": "~4.4.0",
     "ngstorage": "~0.3.9",
-    "ng-switchery": "~1.0.0-alpha7"
+    "ng-switchery": "~1.0.0-alpha7",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
