--- a/dashboard/src/main/resources/dashboard-client/bower.json
+++ b/dashboard/src/main/resources/dashboard-client/bower.json
@@ -33,7 +33,8 @@
     "fontawesome": "~4.4.0",
     "ngstorage": "~0.3.9",
     "ng-switchery": "~1.0.0-alpha7",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "jquery-listnav": "2.4.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
