--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <main.basedir>${project.basedir}</main.basedir>
         <java.version>1.8</java.version>
         <spring-boot.version>1.3.0.RELEASE</spring-boot.version>
+        <spring-loaded.version>1.2.5.RELEASE</spring-loaded.version>
         <mysql-connector.version>5.1.34</mysql-connector.version>
         <jackson-core.version>2.6.1</jackson-core.version>
         <logback-classic.version>1.1.2</logback-classic.version>
@@ -66,7 +67,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>springloaded</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>${spring-loaded.version}</version>
             </dependency>
 
             <dependency>
