--- a/website/src/main/resources/application-prod.properties
+++ b/website/src/main/resources/application-prod.properties
@@ -10,7 +10,7 @@ spring.datasource.initial-size=2
 spring.datasource.sql-script-encoding=UTF-8
 
 spring.jpa.database=MYSQL
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.jpa.hibernate.ddl-auto=update
 
