--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
         <jackson-annotations.version>2.6.1</jackson-annotations.version>
         <ehcache.version>2.10.1</ehcache.version>
         <hamcrest-all.version>1.3</hamcrest-all.version>
+        <slf4j-api.version>1.7.13</slf4j-api.version>
     </properties>
 
     <dependencyManagement>
@@ -148,6 +149,11 @@
                 <version>${ehcache.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j-api.version}</version>
+            </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
